<resources>
    <string name="app_name">PlanFit</string>
    <!-- main view -->
    <string name="health">헬스</string>
    <string name="week_exercise_goal">이번 주 운동 목표는</string>
    <string name="weight_loss_plan">체지방 감소 추천 플랜 (초급)</string>
    <string name="exercise">운동</string>
    <string name="analysis">분석</string>
    <string name="community">커뮤니티</string>
    <string name="profile">프로필</string>

    <!-- exercise list -->
    <string name="exercise_list_title">오늘의 추천 운동</string>
    <string name="exercise_list_minute">58분</string>
    <string name="exercise_list_count">총 6개</string>
    <string name="exercise_list_superset">슈퍼세트</string>
    <string name="exercise_list_plus">운동 추가하기</string>
    <string name="exercise_list_start">시작하기</string>

    <!-- exercise main -->
    <string name="exercise_main_modify">세트 수정</string>
    <string name="exercise_main_break">휴식 타이머</string>
    <string name="exercise_main_add">세트 추가</string>
    <string name="exercise_main_order">1 / 6</string>
    <string name="exercise_main_first">랫 풀다운</string>
    <string name="exercise_main_next">다음 운동</string>
    <string name="exercise_main_kg_num">8</string>
    <string name="exercise_main_kg">kg</string>
    <string name="exercise_main_count_num">15</string>
    <string name="exercise_main_count">회</string>
    <string name="exercise_main_set">세트</string>
    <string name="exercise_main_complete">"세트 완료"</string>
</resources>