<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/shape_gray_line_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32.5dp">

        <TextView
            android:id="@+id/tv_exercise_main_set_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14.5dp"
            android:textAppearance="@style/Typography.PlanFit.body01_bold"
            android:textColor="@color/gray01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_exercise_main_set"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2" />

        <TextView
            android:id="@+id/tv_exercise_main_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_main_set"
            android:textAppearance="@style/Typography.PlanFit.body01_bold"
            android:textColor="@color/gray01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_exercise_main_set_num"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_exercise_main_kg_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/exercise_main_kg_num"
            android:textAppearance="@style/Typography.PlanFit.subtitle01"
            android:textColor="@color/gray01"
            app:layout_constraintBottom_toBottomOf="@+id/tv_exercise_main_set_num"
            app:layout_constraintStart_toEndOf="@id/tv_exercise_main_set_num"
            app:layout_constraintTop_toTopOf="@id/tv_exercise_main_set_num" />

        <TextView
            android:id="@+id/tv_exercise_main_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_main_kg"
            android:textAppearance="@style/Typography.PlanFit.subtitle02"
            android:textColor="@color/gray01"
            app:layout_constraintBottom_toBottomOf="@+id/tv_exercise_main_kg_num"
            app:layout_constraintStart_toEndOf="@id/tv_exercise_main_kg_num"
            app:layout_constraintTop_toTopOf="@id/tv_exercise_main_kg_num" />

        <ImageView
            android:id="@+id/iv_exercise_main_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34.5dp"
            android:src="@drawable/ic_slash_active_16"
            app:layout_constraintBottom_toBottomOf="@id/tv_exercise_main_kg"
            app:layout_constraintEnd_toStartOf="@+id/tv_exercise_main_count_num"
            app:layout_constraintStart_toEndOf="@+id/tv_exercise_main_kg"
            app:layout_constraintTop_toTopOf="@id/tv_exercise_main_kg" />

        <TextView
            android:id="@+id/tv_exercise_main_count_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_main_count_num"
            android:textAppearance="@style/Typography.PlanFit.subtitle01"
            android:textColor="@color/gray01"
            app:layout_constraintBottom_toBottomOf="@id/iv_exercise_main_slash"
            app:layout_constraintEnd_toStartOf="@+id/tv_exercise_main_count"
            app:layout_constraintTop_toTopOf="@id/iv_exercise_main_slash" />

        <TextView
            android:id="@+id/tv_exercise_main_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_main_count"
            android:textAppearance="@style/Typography.PlanFit.subtitle02"
            android:textColor="@color/gray01"
            app:layout_constraintBottom_toBottomOf="@id/tv_exercise_main_count_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_exercise_main_count_num" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>