<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray08">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_exercise_main_top"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_exercise_main_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_left_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_exercise_main_headphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_headphone_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_exercise_main_setting"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_exercise_main_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:rotation="90"
            android:src="@drawable/ic_ellipsis_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_exercise_main_mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_exercise_main_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_exercise_main_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray_fill_4_rect"
            android:paddingHorizontal="3.5dp"
            android:paddingVertical="6dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_exercise_main_first">

            <TextView
                android:id="@+id/tv_exercise_main_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/exercise_main_order"
                android:textAppearance="@style/Typography.PlanFit.caption03"
                android:textColor="@color/gray02"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_exercise_main_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/exercise_main_first"
            android:textAppearance="@style/Typography.PlanFit.head04"
            android:textColor="@color/gray01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_exercise_main_order" />

        <TextView
            android:id="@+id/tv_exercise_main_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="73dp"
            android:text="@string/exercise_main_next"
            android:textAppearance="@style/Typography.PlanFit.caption02"
            android:textColor="@color/gray02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_exercise_main_next_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="체스트 프레스 머신"
            android:textAppearance="@style/Typography.PlanFit.body01_bold"
            android:textColor="@color/gray01"
            app:layout_constraintStart_toStartOf="@+id/tv_exercise_main_next"
            app:layout_constraintTop_toBottomOf="@+id/tv_exercise_main_next" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/rl_exercise_main_modify">

        <ImageView
            android:id="@+id/iv_exercise_main_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/exercise_main_add"
            android:src="@drawable/ic_plus_16"
            app:layout_constraintEnd_toStartOf="@+id/tv_exercise_main_add"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_exercise_main_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/exercise_main_add"
            android:textAppearance="@style/Typography.PlanFit.body01_bold"
            android:textColor="@color/gray02"
            app:layout_constraintBottom_toBottomOf="@+id/iv_exercise_main_add"
            app:layout_constraintStart_toEndOf="@+id/iv_exercise_main_add"
            app:layout_constraintTop_toTopOf="@+id/iv_exercise_main_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/rl_exercise_main_modify"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/shape_gray_fill_12_rect"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/cl_exercise_main_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_exercise_main_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_pencil_16" />

        <TextView
            android:id="@+id/tv_exercise_main_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/iv_exercise_main_icon"
            android:text="@string/exercise_main_modify"
            android:textAppearance="@style/Typography.PlanFit.subtitle02_bold"
            android:textColor="@color/gray02" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_exercise_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tv_exercise_main_break"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@drawable/shape_gray_fill_15_rect"
            android:gravity="center"
            android:text="@string/exercise_main_break"
            android:textAppearance="@style/Typography.PlanFit.subtitle01"
            android:textColor="@color/main_green01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_exercise_main_complete"
            app:layout_constraintHorizontal_weight="120"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_exercise_main_complete"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/shape_main_fill_15_rect"
            android:gravity="center"
            android:textAppearance="@style/Typography.PlanFit.subtitle01"
            android:textColor="@color/gray10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="204"
            app:layout_constraintStart_toEndOf="@+id/tv_exercise_main_break"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="세트 완료" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>